--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,13 @@
-<div id="posts">
 
   <% @posts.each do |post| %>
-  <div class="post-abstract">
-    <h1><%= link_to post.title, post_url(post) %><% if from_tableless(post) %><span class="label important">Tableless</span><% end %></h1>
-    <p class="time-ago">Publicado há <%= time_ago_in_words(post.published_date) %><% if not from_tableless(post) and (not post.block_comments or not post.comments.published.empty?) %> | <%= link_to total_comments_in_words(post.comments.published.length), post_path(post) + '#comments' %><% end %></p>
-    <!--
-    <p class="abstract"><%= link_to post.abstract, post_path(post) %></p>
-    -->
-  </div>
+  <article>
+	<a href="<%= post_url(post) %>">
+	  <header>
+		<% if from_tableless(post) %><div class="tableless">Tableless</div><% end %>  
+      	<h1><%= post.title %></h1>
+	  </header>
+      <p><%= post.abstract %></p>
+	</a>
+  </article>
   <% end %>
-  
-</div>
+
