--- a/app/views/layouts/_header_blog.html.erb
+++ b/app/views/layouts/_header_blog.html.erb
@@ -11,6 +11,6 @@
 		  
 			  </ul>
 			</nav>
-		  <p>Você está no blog do programador Davi Ferreira.</p>
+		  <p>Boa tarde, você está no blog do programador Davi Ferreira.</p>
 		</section>
   </header>
