--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -10,8 +10,7 @@ body {
 
 body > header {
 	position: fixed;
-	border-bottom: 1px dotted #ccc;
-	background-color: #333;
+	border-bottom: 1px solid #fff;
 	width: 100%;
 	z-index: 10;
 	top: 0;
@@ -19,6 +18,13 @@ body > header {
 	opacity: 0.9;
 	padding: 10px 60px;
 	color: #333;
+	background: -moz-linear-gradient(center top , #FAFAFA, #EAEAEA) repeat scroll 0 0 transparent;
+	border-bottom: 1px solid #CACACA;
+	background:#fafafa;
+	background:-webkit-gradient(linear,left top,left bottom,from(#fafafa),to(#eaeaea));
+	background:-moz-linear-gradient(top,#fafafa,#eaeaea);
+	background:-o-linear-gradient(top,#fafafa,#eaeaea);
+	box-shadow:0 0 5px #ccc;
 }
 
 body > header section {
@@ -29,9 +35,9 @@ body > header p {
 	margin: 0;
 	font-size: 14px;
 	font-weight: 600;
-	padding: 3px 0 0;
-	text-shadow: -1px -1px 0 #55665e;
-	color: #e2e2e2;
+	padding: 4px 0 0;
+	text-shadow: -1px -1px 0 #e2e2e2;
+	color: #55665e;
 }
 
 body > header nav {
