New favicon, new header colors.

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -20,7 +20,7 @@
   <%= auto_discovery_link_tag(:atom, {:controller => "posts", :action => "feed"}) %>
 
   <%= csrf_meta_tag %>
-  <link rel="shortcut icon" href="/images/favicon.gif" />
+  <link rel="shortcut icon" href="/images/favicon.ico" />
 </head>
 <body>
 
