--- a/app/views/layouts/_header_blog.html.erb
+++ b/app/views/layouts/_header_blog.html.erb
@@ -2,15 +2,14 @@
 	  <section>
 		  <nav>
 		      <ul>
-
-
 		        <li><a href="http://twitter.com/davitferreira" class="twitter-follow-button" data-button="grey" data-text-color="#FFFFFF" data-link-color="#00AEFF" data-lang="pt" >Follow @davitferreira</a></li>
-
 	      	  	<li><%=link_to image_tag("rss.png"), blog_path(:format => "atom") %></li>
-
-		  
 			  </ul>
 			</nav>
-		  <p>Boa tarde, você está no blog do programador Davi Ferreira.</p>
+            <p>
+              <a href="/blog">
+                <%= image_tag("me.jpg") %> Davi Ferreira &raquo; blog
+              </a>
+            </p>
 		</section>
   </header>
