--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -18,7 +18,7 @@
         <li>Meus links favoritos você encontra no <%= link_to "Delicious", "http://www.delicious.com/daviferreira" %>.</li>
         <li>Alguns trabalhos de criação estão disponíveis no <%= link_to "DeviantArt", "http://daviferreira.deviantart.com" %>.</li>
         <li>E pra conferir as músicas que gosto acesse o meu perfil no <%= link_to "Last.fm", "http://www.last.fm/user/davitf" %>.</li>
-        
+        <li><a href="http://www.sobremarketing.com.br/2012/01/10/katipsoi-zunontee/">Katipsoi Zunontee</a></li> 
       </ul>
     </section>
   </div>
