New layout plus interactions.

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,9 +1,9 @@
-<article id="comment-<%=comment.id%>" class="comment<% if comment.author == "Davi Ferreira" %> owner<% end %><% if not comment.comment_id.nil? and comment.comment_id > 0 %> reply<% end %>">
-	<div class="author">
+<article id="comment-<%=comment.id%>" class="comment<% if comment.author == "Davi Ferreira" %> owner<% end %><% if not comment.comment_id.nil? and comment.comment_id > 0 %> reply<% end %> container_12 clearfix">
+	<div class="author grid_2">
 		<p><%= gravatar_for comment %></p>
-		<p class="date"><%= raw(comment.created_at.strftime("%d/%m/%Y %H:%M").sub(' ', '<br />')) %></p>
+		<time datetime="<%= comment.created_at %>" pubdate><%= l comment.created_at, :format => "%d/%m/%Y" %><br /><%= l comment.created_at, :format => "%H:%M" %></time>
 	</div>
-	<div class="comment">
+	<div class="comment grid_10">
 		<p><strong><% if comment.url != "" %><%= link_to comment.author, check_for_http(comment.url) %><% else %><%= comment.author %><% end %> escreveu:</strong></p>
 		<p><%= sanitize_preserving_code comment.body %></p>
 		<% unless @post.block_comments %>
