--- a/app/views/layouts/_footer_blog.html.erb
+++ b/app/views/layouts/_footer_blog.html.erb
@@ -15,3 +15,7 @@ var pageTracker = _gat._getTracker("UA-1735379-1");
 pageTracker._trackPageview();
 } catch(err) {}
 </script>
+
+<script type="text/javascript" src="https://apis.google.com/js/plusone.js">
+  {lang: 'pt-BR'}
+</script>
