--- a/app/views/layouts/_header_blog.html.erb
+++ b/app/views/layouts/_header_blog.html.erb
@@ -1,19 +1,13 @@
-<section id="top">
-  <% if blog_home_page? %>
-  <nav>
+<section id="header" class="clearfix container_12">
+  <header id="main" class="grid_4 alpha">
+    <h1><%= link_to "Davi Ferreira", blog_url %></h1>
+  </header>
+  <nav class="grid_8">
     <ul>
-      <li><a href="/a" title="Portfolio">Portfolio</a></li>
-      <li><a href="#b" title="Github">Github</a></li>
-      <li><a href="#c" title="Twitter">Twitter</a></li>
-      <li><a href="#c" title="Linkedin">Linkedin</a></li>
+      <li><a href="/" title="Portfolio">Portfolio</a></li>
+      <li><a href="http://www.github.com/daviferreira" title="Github">Github</a></li>
+      <li><a href="http://www.twitter.com/davitferreira" title="Twitter">Twitter</a></li>
+      <li><a href="http://br.linkedin.com/in/daviferreira" title="Linkedin">Linkedin</a></li>
     </ul>
   </nav>
-  <% end %>
-  <header>
-    <% if blog_home_page? %>
-	  <h1>Davi Ferreira</h1>
-	  <% else %>
-	  <h1><%= @post.title %></h1>
-	  <% end %>
-  </header>
 </section>
