--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,30 @@
-<section id="post">
+<section id="post" class="container_12 clearfix">
   <article>
-    <%= raw(@post.body) %>
+	  <header>
+		  <h1><%= @post.title %></h1>
+	</header>
+	
+	   	   	<%= raw(@post.body) %>
+	
+	
+	<ul class="social clearfix">
+
+
+	      <li class="twitter"><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-url="<%= @share_url %>">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script></li>
+      
+	      <li class="fb"><div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like href="<%= @share_url %>" layout="button_count" show_faces="false" colorscheme="dark" font=""></fb:like></li>
+
+	      <li class="googleplus"><g:plusone size="medium"></g:plusone></li>
+	    </ul>
+	
   </article>
 </section>
   
-<section id="comments">
+<section id="comments" class="container_12">
 	<% if not @post.block_comments or not @post.comments.published.empty? %>
-	  <h2><%= total_comments_in_words(@post.comments.published.length) %></h2>    
+	<header>
+	  <h1><%= total_comments_in_words(@post.comments.published.length) %></h1>    
+	</header>
 	<% end %>
     
 	<% unless @post.comments.published.empty? %>
@@ -17,7 +35,7 @@
 </section>
 
 <% if not @post.block_comments %>
-<section id="comments-form">
+<section id="comments-form" class="container_12 clearfix">
 	<header>
 		<h3 id="tit-form-comment">Deixe seu comentário:</h3>
 	</header>
