--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -1,121 +1,127 @@
-/* Reset
--------------------------------------------------------------- */
-    
-/* v1.0 | 20080212 */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	font-size: 100%;
-	vertical-align: baseline;
-	background: transparent;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-
-/* remember to define focus styles! */
-:focus {
-	outline: 0;
-}
-
-/* remember to highlight inserts somehow! */
-ins {
-	text-decoration: none;
-}
-del {
-	text-decoration: line-through;
-}
-
-/* tables still need 'cellspacing="0"' in the markup */
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
+html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,code,del,dfn,em,img,q,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{border:0;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;vertical-align:baseline;margin:0;padding:0}table{border-collapse:separate;border-spacing:0;margin-bottom:1.4em}caption,th,td{text-align:left;font-weight:400}blockquote:before,blockquote:after,q:before,q:after{content:""}blockquote,q{quotes:}a
+img{border:none}.container_12{max-width:1080px;width:88%;margin-left:auto;margin-right:auto}.grid_1,.grid_2,.grid_3,.grid_4,.grid_5,.grid_6,.grid_7,.grid_8,.grid_9,.grid_10,.grid_11{display:inline;float:left;position:relative;margin-left:1%;margin-right:1%}.grid_12{display:inline;float:left;position:relative;margin-left:1%;margin-right:1%}.alpha{margin-left:0!important}.omega{margin-right:0!important}.container_12
+.grid_1{width:6.333%}.container_12
+.grid_2{width:14.667%}.container_12
+.grid_3{width:23.0%}.container_12
+.grid_4{width:31.333%}.container_12
+.grid_5{width:39.667%}.container_12
+.grid_6{width:48.0%}.container_12
+.grid_7{width:56.333%}.container_12
+.grid_8{width:64.667%}.container_12
+.grid_9{width:73.0%}.container_12
+.grid_10{width:81.333%}.container_12
+.grid_11{width:89.667%}.container_12
+.grid_12{width:98.0%}.container_12 .grid_8
+.grid_4.alpha{width:48.2%;margin-right:1.5%}.container_12 .grid_8
+.grid_4.omega{width:48.2%;margin-left:1.5%}.container_12 .grid_8
+.grid_6.alpha{width:48.5%;margin-right:1.5%}.container_12 .grid_8
+.grid_6.omega{width:48.5%;margin-left:1.5%}.containe
+.prefix_1{padding-left:8.333%}.container_12
+.prefix_2{padding-left:16.667%}.container_12
+.prefix_3{padding-left:25.0%}.container_12
+.prefix_4{padding-left:33.333%}.container_12
+.prefix_5{padding-left:41.667%}.container_12
+.prefix_6{padding-left:50.0%}.container_12
+.prefix_7{padding-left:58.333%}.container_12
+.prefix_8{padding-left:66.667%}.container_12
+.prefix_9{padding-left:75.0%}.container_12
+.prefix_10{padding-left:83.333%}.container_12
+.prefix_11{padding-left:91.667%}.container_12
+.suffix_1{padding-right:8.333%}.container_12
+.suffix_2{padding-right:16.667%}.container_12
+.suffix_3{padding-right:25.0%}.container_12
+.suffix_4{padding-right:33.333%}.container_12
+.suffix_5{padding-right:41.667%}.container_12
+.suffix_6{padding-right:50.0%}.container_12
+.suffix_7{padding-right:58.333%}.container_12
+.suffix_8{padding-right:66.667%}.container_12
+.suffix_9{padding-right:75.0%}.container_12
+.suffix_10{padding-right:83.333%}.container_12
+.suffix_11{padding-right:91.667%}.container_12
+.push_1{left:8.333%}.container_12
+.push_2{left:16.667%}.container_12
+.push_3{left:25.0%}.container_12
+.push_4{left:33.333%}.container_12
+.push_5{left:41.667%}.container_12
+.push_6{left:50.0%}.container_12
+.push_7{left:58.333%}.container_12
+.push_8{left:66.667%}.container_12
+.push_9{left:75.0%}.container_12
+.push_10{left:83.333%}.container_12
+.push_11{left:91.667%}.container_12
+.pull_1{left:-8.333%}.container_12
+.pull_2{left:-16.667%}.container_12
+.pull_3{left:-25.0%}.container_12
+.pull_4{left:-33.333%}.container_12
+.pull_5{left:-41.667%}.container_12
+.pull_6{left:-50.0%}.container_12
+.pull_7{left:-58.333%}.container_12
+.pull_8{left:-66.667%}.container_12
+.pull_9{left:-75.0%}.container_12
+.pull_10{left:-83.333%}.container_12
+.pull_11{left:-91.667%}.clear{clear:both;display:block;overflow:hidden;visibility:hidden;width:0;height:0}.clearfix:after{clear:both;content:' ';display:block;font-size:0;line-height:0;visibility:hidden;width:0;height:0}* html .clearfix,*:first-child+html
+.clearfix{zoom:1}::-moz-selection{background:#db1010;color:#fff;text-shadow:none}::selection{background:#db1010;color:#fff;text-shadow:none}
 
 html {
-  background-color: #4e7178;
+  background: #fff url(/images/bg-cover.png) repeat 0 0;
 }
 
-body {
-  font-family: "Helvetica Neue", "Arial", sans-serif;
-  margin:2% auto;
-  width:960px;
-  background-color:#f1f7e2;
-  background:#f1f7e2 -webkit-gradient(linear, left bottom, left top, from(#f1f7e2), to(#e5e7eb)) repeat-x;
-  background:#f1f7e2 -webkit-linear-gradient(bottom, #f1f7e2 40%, #e5e7eb) repeat-x;
-  background:#f1f7e2 -moz-linear-gradient(bottom, #f1f7e2 40%, #e5e7eb) repeat-x;
-  background:#f1f7e2 -ms-linear-gradient(bottom, #f1f7e2 40%, #e5e7eb) repeat-x;
-  background:#f1f7e2 linear-gradient(bottom, #f1f7e2 40%, #e5e7eb) repeat-x;
-  background-size:100% 150px;
-  border-top:1px solid #eceeef;
-  border-radius:1px;
-  text-shadow:#fffeff 0 1px 0;
-  -webkit-box-shadow:0 0 10px rgba(0,20,50,.25);
-  -moz-box-shadow:0 0 10px rgba(0,20,50,.25);
-  -o-box-shadow:0 0 10px rgba(0,20,50,.25);
-  box-shadow:0 0 10px rgba(0,20,50,.25);
+body {  
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 16px;
 }
 
 code, pre {
-  text-shadow: none;
+  font-family: 'Monaco', fixed, monospace;  
+  font-size: 13px;
 }
 
-section#blog {
+div#blog-container {
   padding: 40px;
+  margin:2% auto;
+  max-width: 1080px;
+  width: 88%;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
-section#top header {
-  margin: 0 0 60px 0;
+#header {
+  height:6.15em;
+  border-bottom:1px solid rgba(0,0,0,0.2);
+  margin-bottom: 2.5em;
 }
 
-section#top nav {
-  float: right;
+#header nav {
   margin: 32px 0 0;
 }
 
-section#top nav ul {
+#header nav ul {
   display:block;
 }
 
-section#top nav ul li {
+#header nav ul li {
   float:left;
   border-left: 1px dotted #ccc;
   display: block;
-  height: 13px;
+  height: 14px;
   overflow: hidden;
 }
 
-section#top nav ul li:first-child {
+#header nav ul li:first-child {
   border: none;
 }
 
-section#top nav li a {
+#header nav ul li:first-child a {
+  padding: 0 54px 0 0;
+}
+
+#header nav li a {
   font-size:12px;
-  color:#4e7178;
+  color:#df0d32;
   text-decoration:none;
   text-transform:uppercase;
-  padding:0 13px;
+  padding:0 54px;
   -webkit-transition:150ms all linear;
   -moz-transition:150ms all linear;
   -o-transition:150ms all linear;
@@ -124,21 +130,21 @@ section#top nav li a {
   display:block;
 }
 
-section#top nav li a:after {
+#header nav li a:after {
 	content:attr(title);
 	display:block;
 }
 
-section#top nav li a:hover {
-  margin-top:-13px;
+#header nav li a:hover {
+  margin-top:-14px;
   color:#000;
 }
 
 h1 {
-  font-size: 62px;
+  font-size: 42px;
   line-height:66px;
-  text-shadow:#fff 0 1px 0;
-  letter-spacing: -2px;
+  text-shadow:1px 1px 1px #ccc;
+  letter-spacing: -1px;
   font-weight: 500;
 }
 
@@ -157,15 +163,28 @@ h2 {
 }
 
 h3 {
-  font-size: 24px;
+  font-size: 26px;
   font-weight: 300;
-  color: #4e7178;
-  margin: 12px 0 0;
+  margin: 26px 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Georgia", serif;
 }
 
 a {
   text-decoration: none;
-  color: #4e7178;
+  color: #df0d32;
+  color: rgba(223, 13, 50, .6);
+  -webkit-transition: color .3s ease-in-out;  
+  -moz-transition: color .3s ease-in-out;
+  transition: color .3s ease-in-out;  
+}
+
+a:hover {
+	color: #df0d32;
+	color: rgba(223, 13, 50, 1);
+  text-shadow: -1px -1px 0 #fff;
 }
 
 h2 a {
@@ -176,24 +195,47 @@ h2 a:hover {
   color: #4e7178;
 }
 
-ul#posts-index li{
-  margin: 0 0 60px 0;
-  border-left: 8px solid #000;
-  padding: 0 0 0 20px;
+#header h1 {
+  text-transform: lowercase;
 }
 
-ul#posts-index li:hover {
-  border-color: #4e7178;
+#posts_index p {
+  font-size: 16px;
+  line-height: 26px;
+  margin: 16px 0 0;
 }
 
-ul#posts-index li:hover a {
-  color: #4e7178
+#posts_index section {
+  margin: 0 0 60px 8px;
 }
 
-ul#posts-index li div.time-ago{
+#posts_index article section a {
+  color: #000;
+}
+
+#posts_index a:hover {
+  color: #df0d32;
+  cursor: pointer!important;
+}
+
+#posts_index time, .author time{
+  font-family: 'Monaco', fixed, monospace;    
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #666;
+}
+
+#posts_index aside {
+  margin: 6px 0 0;
+}
+
+#posts_index aside .comments {
   font-size: 14px;
-  margin: 12px 0 0;
-  color: #333;
+  margin: 16px 0 0;
+}
+
+#posts_index aside .comments a{
+  color: #000;
 }
 
 span.label{
@@ -217,17 +259,249 @@ span.label.tableless{
   background-color: #eb181e;
 }
 
-section#post p {
-  line-height: 22px;
-  margin: 0 0 22px 0;
+#post p {
+  line-height: 26px
 }
 
-section#post h2, section#post h4 {
-  font-weight: 300;
+#post p, #post ul, #post ol, #post table, #post pre, #post code {
+  margin: 0 0 26px 0;
+}
+
+#post pre ol {
+  margin: 0 0;
+}
+
+#post h2, h3, h4 {
   margin: 22px 0;
 }
 
-body.post h1 {
+#post h4 {
+  font-size: 22px;
+}
+
+#post h1 {
   font-size: 48px;
   line-height: 52px;
+  margin: 0 0 40px 0;
 }
+
+time em, aside .comments em {
+  font-weight: 800;
+  color: #df0d32;
+  font-size: 16px;
+  display: inline-block;
+  margin: 0 12px 0 0;
+}
+
+time em {
+  font-size: 12px;
+}
+
+.comments a:hover {
+  color: #df0d32 !important;
+}
+
+#post ul {
+  list-style: inside square;
+  margin-bottom: .8em;
+}
+
+#post ul li {
+  line-height: 26px;
+}
+
+table.propriedades {
+width:90%;
+border:none;
+margin:0.5em 0 1.9em 0;
+}
+
+table.propriedades thead tr th
+{
+  text-align:center;
+  padding:0.5em;
+  background-color:#f2f2f2;
+  border-bottom:1px dotted #ccc;
+  font-weight: normal;
+}
+
+table.propriedades tr td {
+border-bottom:1px solid #C7E8F1;
+margin:0 0;
+padding:0.5em;
+}
+
+table.propriedades.canvas tr td
+{
+  padding:0.5em;
+  text-align:center;
+}
+
+table.propriedades tr td.opcao {
+font-weight:normal;
+border-right:1px solid #FEB18D;
+padding-right:0.7em;
+text-align:right;
+}
+
+#post .social {
+  margin: 26px 0;
+  border-top: 1px dotted #ccc;
+  border-bottom: 1px dotted #ccc;
+}
+
+#post .social li {
+  float: left;
+  list-style: none;
+  padding: 12px 0;
+}
+
+#post .social .fb{
+  margin-top: -2px;
+}
+
+#post .social .googleplus {
+  margin-left: 24px;
+}
+
+#comments article {
+  margin: 24px 0;
+  padding: 24px 0;
+  border-bottom: 1px dotted #ccc;
+}
+
+#comments .comment p, .new_comment p {
+  line-height: 26px;
+  margin: 0 0 16px 0;
+}
+
+.author img {
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+}
+
+form.new_comment{
+  padding:12px;
+  background-color:#f2f2f2;
+  width:470px;
+  border-radius:6px;
+  -moz-border-radius:6px;
+  -moz-border-radius:6px;
+}
+
+form.new_comment p label, form.new_comment-reply p label {
+  display:block;
+} 
+
+
+form.new_comment-reply input[type="text"], form.new_comment-reply textarea, form.new_comment input[type="text"], form.new_comment textarea {
+  width:450px;
+  padding:0.7em;
+}
+
+.error{
+  border-color:red;
+  color:red;
+}
+
+.new_comment input[type="submit"]{
+  padding: 12px;
+  font-size:18px;
+  font-weight: 800;
+  cursor:pointer;
+}
+
+.new_comment small{display:block;}
+
+#nav_posts {
+  overflow: hidden;
+}
+
+#nav_posts a {
+  cursor: pointer;
+  position: fixed;
+  top: 50%;
+  height: 100px;
+  width: 200px;
+  margin-top: -50px;
+  background-color: rgba(236, 236, 236, .6);
+  border: 1px solid rgba(236, 236, 236, .4);
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  border-radius: 6px;
+  -webkit-transition: all .3s ease-in-out;
+  -webkit-opacity: .6;
+  -moz-transition: all .3s ease-in-out;
+  -moz-opacity: .6;
+  transition: all .3s ease-in-out;
+  opacity: .6;
+}
+
+#nav_posts a:hover {
+  -moz-box-shadow: 0 0 6px #666;
+  -webkit-box-shadow: 0 0 6px #666;
+  box-shadow: 0 0 6px #666;
+  cursor: pointer;
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
+  background-color: #df0d32;
+  border-color: #df0d32;
+  color: #fff;
+  text-shadow: none;
+}
+
+#nav_posts p {
+  display: none;
+  padding: 16px;
+  overflow: hidden;
+  font-weight: normal;
+  font-size: 14px;
+  margin: 0 0;
+}
+
+#nav_posts span {
+  font-size: 30px;
+  display: block;
+  margin: 28px 0 0;
+  overflow: hidden;
+}
+
+#nav_posts .prev span {
+  text-align: right;
+}
+
+#nav_posts a:hover p {
+  display: block;
+}
+
+#nav_posts a:hover span {
+  display: none;
+}
+
+#nav_posts .prev {
+  left: 0;
+  margin-left: -166px;
+  text-align: right;
+  padding-right: 12px;
+}
+
+#nav_posts .prev:hover {
+  margin-left: -10px;
+}
+
+#nav_posts .next {
+  right: 0;
+  margin-right: -166px;
+  padding-left: 12px;
+}
+
+#nav_posts .next:hover {
+  margin-right: -10px;
+}
+
+blockquote{margin-bottom:18px;border-left:5px solid #eee;padding-left:15px;}blockquote p{font-family: Georgia, serif; font-size:18px;font-weight:300;line-height:18px;margin-bottom:0;}
+blockquote small,blockquote cite{display:block;font-size:14px;font-weight:300;line-height:18px;color:#bfbfbf;}blockquote small:before,blockquote cite:before{content:'\2014 \00A0';}
+blockquote p{margin:0 0!important;line-height:auto!important;}
+
