Add site navigation to posts.

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_for(@post.comments.build, :remote => true, :html => { :id => id, :class => "new_comment" } ) do |f| %>
+<%= form_for(@post.comments.build, :remote => true, :html => { :id => id, :class => "new_comment" } ) do |f| %>
   <%= f.hidden_field :post_id, {:value => @post.id} %>
   <%= f.hidden_field :comment_id, {:value => @comment.id } %>
 	<p>
