--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -23,18 +23,9 @@
   <link rel="shortcut icon" href="/images/favicon.gif">
 </head>
 <body>
-  <% if not blog_home_page? %>
-  <nav id="nav_posts">
-  <a href="#" class="prev">
-    <span>&larr;</span>
-    <p>Nunca confie em um programador vestindo terno</p>
-  </a>
-  <a href="#" class="next">
-    <span>&rarr;</span>
-    <p>Canvas: nova classe para manipulação e redimensionamento de imagens com PHP</p>
-  </a>
-  </nav>
-  <% end %>
+
+  <%= render "posts/navigation" if not blog_home_page? and (@previous_post or @next_post) %>
+
   <div id="blog-container">
 	  <%= render "layouts/header_blog" %>
 
