--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,6 +3,7 @@
 	  <header>
 		  <h1><%= @post.title %></h1>
 	</header>
+	<time datetime="<%= @post.published_date %>" pubtime>Publicado em <%= l @post.published_date, :format => '%d de %B de %Y' %></time>
 	
 	   	   	<%= raw(@post.body) %>
 	
