--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -426,6 +426,8 @@ form.new_comment-reply input[type="text"], form.new_comment-reply textarea, form
 
 #nav_posts {
   overflow: hidden;
+  z-index: 9999;
+  position: relative;
 }
 
 #nav_posts a {
