Adding blog background to CDN.

--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -63,7 +63,7 @@ img{border:none}.container_12{max-width:1080px;width:88%;margin-left:auto;margin
 .clearfix{zoom:1}::-moz-selection{background:#db1010;color:#fff;text-shadow:none}::selection{background:#db1010;color:#fff;text-shadow:none}
 
 html {
-  background: #fff url(/images/bg-cover.png) repeat 0 0;
+  background: #fff url(http://www.dfimg.com/images/bg-cover.png) repeat 0 0;
 }
 
 body {  
