Fixing navigation margin.

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <section id="post" class="container_12 clearfix">
-  <aside class="grid_4 clearfix" id="post-info">
+  <aside class="grid_4 clearfix alpha" id="post-info">
     &nbsp;
     <div>
       <header>
