--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title><%= meta_title %></title>
-  <meta description="<%= meta_description %>">
+  <meta name="description" content="<%= meta_description %>">
 
   <% if blog_home_page? %>
     <%= include_javascripts :blog%>
