--- a/app/views/layouts/_footer_blog.html.erb
+++ b/app/views/layouts/_footer_blog.html.erb
@@ -16,6 +16,4 @@ pageTracker._trackPageview();
 } catch(err) {}
 </script>
 
-<script type="text/javascript" src="https://apis.google.com/js/plusone.js">
-  {lang: 'pt-BR'}
-</script>
+<script src="https://apis.google.com/js/plusone.js"></script>
