--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<article id="comment-<%=comment.id%>" class="comment<% if comment.author == "Davi Ferreira" %> owner<% end %><% if not comment.comment_id.nil? and comment.comment_id > 0 %> reply<% end %> container_12 clearfix">
+<section id="comment-<%=comment.id%>" class="comment<% if comment.author == "Davi Ferreira" %> owner<% end %><% if not comment.comment_id.nil? and comment.comment_id > 0 %> reply<% end %> container_12 clearfix">
 	<div class="author grid_2">
 		<p class="image-wrap"><%= gravatar_for comment %></p>
 		<time datetime="<%= comment.created_at %>" pubdate><%= l comment.created_at, :format => "%d/%m/%Y" %><br /><%= l comment.created_at, :format => "%H:%M" %></time>
@@ -10,9 +10,13 @@
     <p class="reply"><%= link_to "Responder", reply_comment_path(comment), :id => "lnk-reply-#{comment.id}" %></p>
     <% end %>
   </div>
-</article>
-<% unless comment.comments.empty? %>
-  <% comment.comments.each do |reply| %>
-    <%= render reply %>
+  
+  <% unless comment.comments.empty? %>
+    <section class="reply clearfix">
+    <% comment.comments.each do |reply| %>
+      <%= render reply %>
+    <% end %>
+	</section>
   <% end %>
-<% end %>
+
+</section>
