--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -388,7 +388,7 @@ text-align:right;
 }
 
 #comments section.reply {
-	margin: 0 0 0 68px;
+	margin: 0 0 0 128px;
   clear: both;
   border-bottom: none;
   border-top: 1px dotted #ccc;
@@ -526,7 +526,7 @@ blockquote{margin:24px;border-left:5px solid #e5687e;padding:15px;}blockquote p{
 blockquote small,blockquote cite{display:block;font-size:14px;font-weight:300;line-height:18px;color:#bfbfbf;}blockquote small:before,blockquote cite:before{content:'\2014 \00A0';}
 blockquote p{margin:0 0!important;line-height:auto!important;}
 
-section.owner, section.owner time{ color: #4ca5fe; }
+section.owner > div > p, section.owner > div > time{ color: #4ca5fe !important; }
 
 .image-wrap {
   display: inline-block;
